# suricata-elasticsearch-output

./: .gitignore  Cargo.toml  README.md
src/: ffi.rs  lib.rs
